syntax = "proto3";

package app;

// protoc --go_out=../ --go-grpc_out=../  coloring_info.proto
option go_package = "app/;app";

// 请求消息
message ServerRequest {
  string name = 1;
  string domain = 2;
  string port =3;
}

// 响应消息
message ServerReply {
  string color = 1;
  string chain =2;
  string domain =3;
  string version=4;
  string name =5;
  string port = 6;
}

// 服务定义
service CoroingService {
  rpc GetColoringInfo(ServerRequest) returns (ServerReply);
}
